tests/baselines/reference/generatorES6_4.errors.txt
tests/cases/compiler/generatorES6_4.ts(2,4): error TS9001: Generators are not currently supported.
tests/cases/compiler/generatorES6_4.ts(3,8): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/compiler/generatorES6_4.ts (2 errors) ====
    var v = { 
       *foo() {
       ~
!!! error TS9001: Generators are not currently supported.
           yield 0
           ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
       }
    }